--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,3 @@
-cargo-features = ["strip"]
 
 [package]
 name = "dotnet-installer"
@@ -13,9 +12,12 @@ anyhow = "1"
 structopt = "0.3"
 clap = "2"
 semver = "0.11.0"
-reqwest = { version = "0.10", default-features = false, features = ["rustls-tls"] }
-tokio = { version = "0.2", features = ["full"] }
+smol = "1"
 tempfile = "3"
+http-types = "2.9.0"
+async-h1 = "2.2.1"
+async-rustls = "0.1.2"
+webpki-roots = "0.21.0"
 
 [profile.release]
 lto = true
