--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 
 [package]
-name = "dotnet-installer"
+name = "dotnet-redist"
 version = "0.1.0"
 authors = ["Zoey Riordan <zoey@dos.cafe>"]
 edition = "2018"
@@ -19,8 +19,8 @@ async-h1 = "2.2.1"
 async-rustls = "0.1.2"
 webpki-roots = "0.21.0"
 
+[build-dependencies]
+embed-resource = "1.1"
+
 [profile.release]
 lto = true
-opt-level = 'z'
-codegen-units = 1
-panic="abort"
