--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 
 [package]
-name = "dotnet-redist"
+name = "dotnet5-webinst"
 version = "0.1.0"
 authors = ["Zoey Riordan <zoey@dos.cafe>"]
 edition = "2018"
