--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
       uses: divvun/actions/version@master
       with:
         cargo: true
+        stable-channel: beta
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Install build dependencies
       uses: divvun/actions/pahkat/init@master
